Merged revisions 17003-17004,17007,17010-17011,17013-17015,17018,17022,17026-17027,17029,17032-17034,17040,17049,17056,17058,17065,17075,17077,17085-17086,17090,17092,17101-17102,17105,17108-17111,17113-17114,17125-17126,17132-17134,17136-17137,17143-17148,17150,17153-17156,17161,17164,17167-17171 via svnmerge from https://svn.codehaus.org/mule/branches/mule-3.x-messaging
........
  r17003 | dirk.olmes | 2010-04-07 15:21:18 +0200 (Wed, 07 Apr 2010) | 1 line
  
  Fix a NPE when the expect header isn't actually present.
........
  r17004 | dirk.olmes | 2010-04-07 16:08:17 +0200 (Wed, 07 Apr 2010) | 2 lines
  
  fix more bugs introduced by the recent http refactorings
........
  r17007 | dirk.olmes | 2010-04-08 13:08:02 +0200 (Thu, 08 Apr 2010) | 1 line
  
  Bring over the fix for MULE-1611 from the 3.x branch, adapted to the message factory.
........
  r17010 | dirk.olmes | 2010-04-08 14:50:01 +0200 (Thu, 08 Apr 2010) | 2 lines
  
  first stab at message serialization. This fixes one test in HttpPersistentQueueTestCase but exposes another issue with the failing test.
........
  r17011 | dirk.olmes | 2010-04-09 14:40:45 +0200 (Fri, 09 Apr 2010) | 2 lines
  
  add a message factory for the email transport
........
  r17013 | dirk.olmes | 2010-04-09 17:57:08 +0200 (Fri, 09 Apr 2010) | 2 lines
  
  adapt to the new serialization handling in MuleMessage
........
  r17014 | dirk.olmes | 2010-04-10 00:42:45 +0200 (Sat, 10 Apr 2010) | 2 lines
  
  Rethink the approach to message serialization. If the payload is Serializable, just write it out, otherwise fall back to converting the payload to a byte[].
........
  r17015 | dirk.olmes | 2010-04-10 02:50:57 +0200 (Sat, 10 Apr 2010) | 2 lines
  
  Create a test case for RmiMuleMessageFactory, remove an obsolete test
........
  r17018 | dirk.olmes | 2010-04-10 17:14:26 +0200 (Sat, 10 Apr 2010) | 2 lines
  
  add test case for the new serialization scheme of MuleMessage
........
  r17022 | dirk.olmes | 2010-04-12 16:42:18 +0200 (Mon